hphp/hack/doc/hack-langspec/tests/Types/type_aliases_rf.php.expectf

Fatal error: Method 'compute' declared in multiple traits in %s/tests/Types/type_aliases_rf.php on line 86